# churn-mlops-prod-v2

./: .gitignore  COURSE_TRANSCRIPT.md  ENHANCEMENT_GUIDE.md  EVOLUTION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MLOPS_PIPELINE_WORKFLOW.md  Makefile  PRODUCTION_README.md  QUICK_REFERENCE.md  README.md  SECURITY.md  V2_COMMANDS.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: .gitignore  config
argocd/: README.md  appproject.yaml
course-notes/: README.md  file-index.md  section-00-overview.md  section-01-understanding-churn.md  section-02-repo-blueprint-env.md  section-03-data-design.md  section-04-data-validation-gates.md  section-16-enhancements-improvements.md
data/: .gitignore
docker/: Dockerfile.api  Dockerfile.ml
docs/: GITOPS_WORKFLOW.md  PRODUCTION_DEPLOYMENT.md  dvc-mlflow-kubeflow.md
k8s/: api-deployment.yaml  api-metrics-annotations-patch.yaml  batch-cronjob.yaml  batch-score-proxy-cronjob.yaml  drift-auto-retrain-cronjob.yaml  drift-cronjob.yaml  high-drift-cronjob.yaml  kustomization.yaml  ml-scripts-configmap.yaml  retrain-cronjob.yaml  seed-model-job.yaml  service.yaml
mlflow/: .env.example
pipelines/: kfp_pipeline.py
requirements/: api.txt  dev.txt  mlops.txt
scripts/: batch_score.sh  batch_score_latest.sh  bootstrap_minikube.sh  build_features.sh  build_labels.sh  build_training_set.sh  check_drift.sh  ensure_latest_predictions.sh  generate_data.sh  monitor_data_drift.sh  prepare_data.sh  promote_model.sh  quick_test.sh  run_api.sh  run_batch_score_and_proxy.sh  run_mlflow_local.sh  score_proxy.sh  setup_production.sh  (+3 more)
(+87 files in other folders)
