[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techitfactory-churn-mlops"
version = "0.1.0"
description = "Production-grade churn prediction MLOps project for an e-learning portal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.24",
	"pandas>=2.0",
	"scikit-learn>=1.3",
	"joblib>=1.3",
	"PyYAML>=6.0",
	"python-dotenv>=1.0",
	"pydantic>=2.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
